# ai-medical-chatbot

./: .gitignore  Chatbot-Medical-Llama3-v2.ipynb  LICENSE  LICENSE.txt  Makefile  Medical-Llama3-v2.ipynb  README.md  TOP1_ROADMAP.md  env.bat  env.sh  pyproject.toml
.github/workflows/: ci-medos-global.yml  deploy-medibot.yml  deploy-medicine-scanner.yml  deploy-metaengine-nearby.yml  sync-hf-space.yml
1-Environment/: README.md  __init__.py
11-Medicine-Scanner/: .env.example  Dockerfile  README.md  app.py  deploy-scanner.sh  requirements.txt  scanner.py
12-MetaEngine-Nearby/: Makefile  README.md  REPO_SYNC_STATUS.md  deploy-nearby.sh
12-MetaEngine-Nearby/01-contracts/: README.md  schemas.py  v2_schemas.py
12-MetaEngine-Nearby/02-config/: README.md  settings.py
12-MetaEngine-Nearby/03-domain/: README.md  entities.py
12-MetaEngine-Nearby/04-providers/: README.md  overpass_provider.py  registry_provider.py
12-MetaEngine-Nearby/05-services/: README.md  meta_v2_service.py  nearby_service.py  ranking.py  routing.py
12-MetaEngine-Nearby/06-api/: main.py
12-MetaEngine-Nearby/07-ui-space/: app.py
12-MetaEngine-Nearby/08-shared/: README.md  geo.py
12-MetaEngine-Nearby/09-tests/: README.md  test_api_wiring.py  test_geo.py  test_hf_space_app.py  test_meta_service.py  test_meta_v2_service.py
12-MetaEngine-Nearby/10-observability/: README.md  analytics.py  logging.py
12-MetaEngine-Nearby/11-data-seeds/: README.md
12-MetaEngine-Nearby/12-deploy/: Dockerfile  deploy-requirements.txt  deploy_hf_space.py  deploy_hf_space.sh  requirements.txt  sync_branch.sh
13-Family-Health-Tree-App/: ANALYSIS.md  README.md
13-Family-Health-Tree-App/01-product/: PRODUCT_SPEC.md
13-Family-Health-Tree-App/03-domain/: domain_model.md
13-Family-Health-Tree-App/04-backend/: BACKEND_ARCHITECTURE.md
13-Family-Health-Tree-App/08-security/: PRIVACY_AND_SAFETY.md
13-MedOS-Family/: ANALYSIS.md  README.md
13-MedOS-Family/01-product/: PRODUCT_SPEC.md
13-MedOS-Family/02-contracts/: family_contracts.md
13-MedOS-Family/03-domain/: domain_model.md
13-MedOS-Family/04-backend/: BACKEND_ARCHITECTURE.md
13-MedOS-Family/07-integration-medos/: INTEGRATION_PLAN.md
14-MedOS-Connect/: README.md
14-MedOS-Connect/01-product/: CONNECTOR_SPEC.md
14-MedOS-Connect/02-api/: API_CONTRACTS.md
14-MedOS-Connect/03-domain/: DOMAIN_MODEL.md
14-MedOS-Connect/04-security/: OAUTH_AND_PRIVACY.md
14-MedOS-Connect/05-connectors/: WITHINGS_CONNECTOR.md
14-MedOS-Connect/06-notifications/: NOTIFICATION_ARCHITECTURE.md
14-MedOS-Connect/07-integration-medos/: INTEGRATION_PLAN.md
15-MedOS-Classify/: README.md
15-MedOS-Classify/01-product/: PRODUCT_SPEC.md
15-MedOS-Classify/02-mcp/: MCP_TOOL_CONTRACTS.md
15-MedOS-Classify/03-models/: MODEL_ARCHITECTURE.md
15-MedOS-Classify/04-data/: DATASET_STRATEGY.md
15-MedOS-Classify/05-training/: TRAINING_PIPELINE.md
15-MedOS-Classify/06-evaluation/: EVALUATION.md
15-MedOS-Classify/07-safety/: SAFETY_AND_COMPLIANCE.md
15-MedOS-Classify/08-integration-medos/: INTEGRATION_PLAN.md
15-MedOS-Classify/09-roadmap/: ROADMAP.md
16-MedOS-Pathogen/: README.md
16-MedOS-Pathogen/01-product/: PRODUCT_SPEC.md
16-MedOS-Pathogen/02-mcp/: MCP_TOOL_CONTRACTS.md
16-MedOS-Pathogen/03-models/: MODEL_ARCHITECTURE.md
16-MedOS-Pathogen/04-data/: DATASET_STRATEGY.md
16-MedOS-Pathogen/05-training/: TRAINING_PIPELINE.md
16-MedOS-Pathogen/06-evaluation/: EVALUATION.md
16-MedOS-Pathogen/07-safety/: SAFETY_AND_COMPLIANCE.md
16-MedOS-Pathogen/08-integration-medos/: INTEGRATION_PLAN.md
16-MedOS-Pathogen/09-roadmap/: ROADMAP.md
17-MedOS-Research/: README.md
17-MedOS-Research/01-product/: RESEARCH_RD_SPEC.md
17-MedOS-Research/02-personas/: RESEARCHER_AND_DOCTOR_ANALYSIS.md
17-MedOS-Research/03-agents/: AGENT_ROLES.md
17-MedOS-Research/04-api/: API_CONTRACTS.md
17-MedOS-Research/05-domain/: DOMAIN_MODEL.md
17-MedOS-Research/06-pipelines/: PIPELINES.md
17-MedOS-Research/07-simulation/: MOLECULE_AND_MEDICINE_SIMULATION.md
17-MedOS-Research/08-publication/: PUBLICATION_WORKFLOW.md
17-MedOS-Research/09-safety/: RESEARCH_SAFETY_AND_GOVERNANCE.md
17-MedOS-Research/10-integration-medos/: INTEGRATION_PLAN.md
17-MedOS-Research/11-backend-stubs/: research-agent-interfaces.ts
17-MedOS-Research/12-sql/: medos_research_schema.sql
2-Data/: 2-Data.ipynb  3-Compression.ipynb  README.md  dialogues_dataset_card.md  dialogues_embededd.csv  dialogues_embededd.pkl  dialogues_metadata.yaml
2-Data/tools/: Notes.txt  timer.py
3-Modeling/: 3-Clustering.ipynb  3-Generative.ipynb  3-Modeling.ipynb  3-Preproces.ipynb  3_2-Clustering.ipynb  3_3-Generative.ipynb  README.md  __init__.py
3-Modeling/credentials/: api.json
3-Modeling/tools/: Clustering.ipynb  Obtain_dataset.ipynb  Semantic_text_search_using_embeddings.ipynb
4-Chatbot/: __init__.py
4-Chatbot/References/: Notes.txt
5-HuggingFace/: .gitignore  Dockerfile  README.md  __init__.py  app.py  requirements.txt
6-FineTunning/: Fine_Tunning_Medical_Mind_Llama3.ipynb  Howto-Finetuning-Llama3-with-unsloth.ipynb  MultipleGpu.ipynb  Parallel-FineTuning.ipynb  __init__.py
7-Multimodal/: README.md  __init__.py
8-Interviewer/: README.md  __init__.py
8-Interviewer/hf/: README.md  __init__.py  ai_config.py  app.py  knowledge_retrieval.py  prompt_instructions.py  requirements.txt  settings.py
9-HuggingFace-Global/: .env.example  .gitignore  Dockerfile  Makefile  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
9-HuggingFace-Global/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
9-HuggingFace-Global/components/: MedOSApp.tsx  MedOSGlobalApp.tsx  ThemeProvider.tsx  WelcomeScreen.tsx
9-HuggingFace-Global/docs/: ADMIN.md
9-HuggingFace-Global/lib/: ab-variant.ts  answer-quality.ts  audit.ts  auth-middleware.ts  crypto.ts  db.ts  (+13 more)
scripts/: check-llm-health.py
tests/: README.md  __init__.py  conftest.py
web/: .env.example  DEPLOYMENT.md  README.md  TESTING.md  next.config.js  package.json  tailwind.config.ts  vercel.json  vitest.config.ts
(+216 files in other folders)
